<resources>
    <string name="app_name">Hire a bike</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="hint_name">Name</string>
    <string name="hint_pass">Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_password">Password must be more than 8 characters</string>

    <string name="three">3D</string>
    <string name="acc">Accessibility</string>
    <string name="menu">Bottom menu</string>
    <string name="search">Search</string>
    <string name="drawopen">Open</string>
    <string name="drawclose">Close</string>
    <string name="location_init">Cách đây</string>
    <string name="dot">.</string>
    <string name="sub">-</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="history">History</string>
    <string name="garage">Bike garage</string>
    <string name="account">Account information</string>
    <string name="balance">Balance</string>
    <string name="logout">Log out</string>
    <string name="home">Home</string>
    <string name="google_login">Login with google</string>
    <string name="signout">Sign out</string>
    <string name="title_activity_garage_map">Map</string>
    <string name="bookbike_button">Book this bike</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_garage_maps">Map</string>
    <string name="addgara_suggest">You dont have any garage, click the button bellow to create one!</string>
    <string name="addgara_button">Create garage</string>
    <string name="default_balance">1000000</string>
    <string name="create_garage_sucessful">Create garage successfully</string>
    <string name="default_info_title">Default info title</string>
    <string name="default_info_snippet">Default info snip</string>

</resources>
