<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navItem3d"
            android:icon="@drawable/ic_baseline_3d_rotation_24px"
            android:title="@string/three" />
        <item
            android:id="@+id/navItemacc"
            android:icon="@drawable/ic_baseline_accessibility_24px"
            android:title="@string/acc" />
        <item
            android:id="@+id/navItemmenu"
            android:icon="@drawable/ic_baseline_menu_24px"
            android:title="@string/menu" />
        <item
            android:id="@+id/navItemsearch"
            android:icon="@drawable/ic_baseline_search_24px"
            android:title="@string/search" />
    </group>



</menu>