<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"


    >


    <group android:checkableBehavior="single"

        xmlns:app="http://schemas.android.com/apk/res-auto"
        >
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24px"
            android:title="@string/home"
           />

        <item
            android:id="@+id/account"
            android:icon="@drawable/ic_baseline_person_24px"
            android:title="@string/account" />

        <item
            android:id="@+id/garage"
            android:icon="@drawable/ic_baseline_store_mall_directory_24px"
            android:title="@string/garage" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/googleg_disabled_color_18"
            android:title="@string/logout" />
        <!--<item-->
            <!--android:id="@+id/history"-->
            <!--android:icon="@drawable/ic_baseline_history_24px"-->
            <!--android:title="@string/history" />-->
    </group>
</menu>